fixed deprecated constructor invocation